# IME_MobileAppFullcode

./: .gitignore
Downloads/chatbotcode/backend/: .env  Dockerfile  README.md  pyproject.toml
Downloads/chatbotcode/backend/app/: main.py
Downloads/chatbotcode/backend/app/api/: deps.py
Downloads/chatbotcode/backend/app/api/routes/: analytics.py  auth.py  chat.py  components.py  docs.py  tickets.py  users.py
Downloads/chatbotcode/backend/app/core/: config.py
Downloads/chatbotcode/backend/app/schemas/: components.py  docs.py  rag.py  tickets.py  user.py
Downloads/chatbotcode/backend/app/services/: auth.py  components.py  rag.py  users.py
Downloads/chatbotcode/backend/assets/components/: components.json  components_index.json
Downloads/chatbotcode/frontend/: .dockerignore  Dockerfile  FASTAPI_INTEGRATION.md  README.md  package-lock.json  package.json  vite.config.ts
Downloads/chatbotcode/frontend/attached_assets/: Pasted--I-am-developing-an-AI-assistant-chatbot-application-for-resolving-tickets-built-with-a-Python-F-1752820711132_1752820711133.txt  Pasted--fastAPI-imports-from-fastapi-import-FastAPI-HTTPException-UploadFile-File-from-fastapi-response-1752837801352_1752837801352.txt  (+3 more)
Downloads/chatbotcode/frontend/client/: ANALYTICS_API_ENDPOINTS.md  index.html
source/repos/IME_Phase1/: API_DOCUMENTATION.md  CHANGELOG.md  FILES_CREATED.md  IME_Phase1_Prompt_Without_EntityFramework.md  PAYMENT_INTEGRATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  REQUIREMENTS_GAP_ANALYSIS.md  SETUP_GUIDE.md  TODO_CHECKLIST.md
(+244 files in other folders)
