[project]
name = "ticket-resolution-chabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-pinecone>=0.2.11",
    "pinecone[grpc]>=7.3.0",
    "pypdf>=5.9.0",
    "python-crontab>=3.3.0",
    "python-jose>=3.5.0",
    "motor>=3.5.1",
    "pymongo>=4.7.3",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.5.2",
    "google-search-results>=2.4.2",
]
